- Styling: fixed og grid pagination hover for dark mode for v2.

--- a/RockWeb/Styles/styles-v2/components/_tables.scss
+++ b/RockWeb/Styles/styles-v2/components/_tables.scss
@@ -793,6 +793,11 @@ tr.row-highlight {
         border-color:     transparent;
       }
 
+      > a:hover {
+        background-color: var(--color-interface-softer);
+
+      }
+
       &.disabled > a {
         cursor: default;
       }
